# anvil

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  go.mod  go.sum  justfile  pyproject.toml  tool.go.mod
.claude/: settings.json
.claude/hooks/: inject-go-conventions.sh
.github/: PULL_REQUEST_TEMPLATE.md  check-skills.sh
.github/workflows/: ci.yml  validate-vault.yml
anvil/agents/: agents.go  anvil-issue-worker.md  anvil-learnings-researcher.md
anvil/skills/: skills.go
bases/: decisions.base  designs.base  embed.go  issues.base  learnings.base  milestones.base  plans.base  vault-overview.base
cmd/anvil/: main.go
docs/: agent-cli-principles.md  code-design.md  dependencies.md  design.md  eval-methodology.md  git-conventions.md  go-conventions.md  guardrails.md  issue-spec.md  product-design.md  releasing.md  skill-authoring.md  system-design.md  test-conventions.md  vault-schemas.md  worktree-workflow.md
docs/system-design/: adapters.md  cli-substrate.md  knowledge-base.md  repo-structure.md  roadmap.md  skill-execution.md  telemetry.md
internal/adapters/: doc.go
internal/cli/: atomic_swap.go  body.go  (+118 more)
schemas/: contract.schema.json  convention.schema.json  decision.schema.json  embed.go  inbox.schema.json  issue.schema.json  learning.schema.json  milestone.schema.json  plan.schema.json  product-design.schema.json  session.schema.json  sweep.schema.json  system-design.schema.json  thread.schema.json  transcript.schema.json
scripts/: wait-for-pr.sh
skills/: skills.go
workflows/: embed.go  vault-hygiene.yml
(+199 files in other folders)
