[project]
name = "anvil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.12.0"
dependencies = [
    "cyclopts>=4.11.0",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
]

[project.scripts]
anvil = "anvil.cli:app"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
commit = [
    "prek>=0.3.11",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

# TOOLS

[tool.ruff]
fix = true
indent-width = 4
line-length = 80
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
